# ctera-python-sdk

./: .gitignore  .pylintrc  .travis.yml  CONTRIBUTING.md  Dockerfile.cterasdk-build  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  backwardCompatibilityTest.py  batchMoveTest.py  doc8.ini  improved_directio_service.py  main.py  moveTuple.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  skipper.yaml  test-requirements.txt  tox.ini  ut-requirements.txt
.actionspanel/: buttons.yml
.github/: CODEOWNERS
.github/workflows/: ci.yml  pr-agent.yml  publish_test_pypi.yml
.travis/: install.sh  run.sh
cterasdk/: __init__.py  config.py  exception.py  exceptions.py  logging.py  settings.py  settings.yml  version.py
cterasdk.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
cterasdk/aio_client/: __init__.py  async_requests.py  async_responses.py  async_tracers.py  clients.py  decorators.py  errors.py
cterasdk/audit/: postman.py
cterasdk/cio/: actions.py  common.py  core.py  edge.py  exceptions.py
cterasdk/cli/: dav.py  direct.py
cterasdk/client/: __init__.py  cteraclient.py  host.py  http.py  ssl.py  utilities.py
cterasdk/clients/: async_requests.py  async_tracers.py  base.py  clients.py  common.py  decorators.py  errors.py  settings.py
cterasdk/common/: __init__.py  datetime_utils.py  defaults.py  enum.py  initializers.py  item.py  modules.py  object.py  types.py  utils.py
cterasdk/conf/: __init__.py
cterasdk/convert/: __init__.py  deserializers.py  exception.py  format.py  parse.py  serializers.py  types.py  xml_types.py
cterasdk/core/: __init__.py  activation.py  admins.py  antivirus.py  base_command.py  buckets.py  cli.py  cloudfs.py  connection.py  credentials.py  decorator.py  devices.py  directoryservice.py  domains.py  edgefilerssyslog.py  enum.py  firmwares.py  fusion_direct.py  groups.py  impersonate.py  io.py  kms.py  licenses.py  login.py  logs.py  mail.py  messaging.py  metadata.py  plans.py  portals.py  query.py  remote.py  reports.py  roles.py  s3.py  servers.py  session.py  settings.py  setup.py  shares.py  (+13 more)
cterasdk/direct/: __init__.py  cli.py  client.py  credentials.py  crypto.py  decompressor.py  exceptions.py  filters.py  io.py  lib.py  stream.py  types.py
cterasdk/edge/: __init__.py  afp.py  aio.py  antivirus.py  array.py  audit.py  backup.py  base_command.py  cache.py  cli.py  config.py  connection.py  ctera_migrate.py  decorator.py  dedup.py  directoryservice.py  directorytree.py  drive.py  enum.py  firmware.py  ftp.py  groups.py  licenses.py  login.py  logs.py  mail.py  migration_tool.py  network.py  nfs.py  ntp.py  power.py  query.py  quotas.py  ransom_protect.py  ransomprotect.py  remote.py  rsync.py  services.py  session.py  shares.py  (+19 more)
cterasdk/exceptions/: __init__.py  auth.py  backup.py  base.py  common.py  direct.py  io.py  notifications.py  session.py  transport.py
cterasdk/lib/: __init__.py  cmd.py  consent.py  crypto.py  file_access_base.py  filesystem.py  iterator.py  platform.py  registry.py  retries.py  session_base.py  task_manager_base.py  tasks.py  tempfile.py  tracker.py  utils.py  version.py
cterasdk/object/: Agent.py  Gateway.py  Portal.py  __init__.py
cterasdk/objects/: __init__.py  authenticators.py  core.py  data.py  drive.py  edge.py  endpoints.py  invitation.py  metadata.py  services.py  uri.py  utils.py
cterasdk/transcript/: apidoc.template  transcribe.py
docs/: Makefile  requirements.txt
docs/source/: chopin3.backup  conf.py  index.rst
samples/: gateway_sample.py  portal_simple_sample.py  remove_devices.py  sample_base.py  services_portal_create_directories_sample.py
tests/ut/: base.py  base_convert.py  base_core.py  base_core_services.py  base_edge.py  nose2.cfg  test_common_object.py  test_convert_format_json.py  test_convert_format_xml.py  test_convert_parse_json.py  test_convert_parse_xml.py  test_core_activation.py  test_core_antivirus.py  test_core_base_command.py  test_core_buckets.py  test_core_cli.py  test_core_cloudfs.py  (+89 more)
(+499 files in other folders)
