[metadata]
name = cterasdk
author = CTERA Networks
author-email = support@ctera.com
home-page = https://github.com/CTERA-Networks/ctera-python-sdk
project_urls =
    Documentation = https://ctera-python-sdk.readthedocs.io/en/latest/
    Source Code = https://github.com/CTERA-Networks/ctera-python-sdk
summary = CTERA Python SDK
description-file = README.md
description-content-type = text/markdown; charset=UTF-8
requires-python = >=3.5

requires-dist =
    setuptools

license = Apache-2
classifier =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Libraries :: Python Modules

# Automatically find root package
[options]
packages = find:
