[metadata]
name = cterasdk
author = CTERA Networks
author-email = support@ctera.com
home-page = https://pypi.org/project/cterasdk/
project_urls =
    Bug Tracker = https://github.com/ctera/ctera-python-sdk/issues
    Documentation = https://ctera-python-sdk.readthedocs.io/en/latest/
    Source Code = https://github.com/ctera/ctera-python-sdk
summary = CTERA Python SDK
description-file =
    README.rst
description-content-type = text/x-rst; charset=UTF-8
requires-python = >=3.5

requires-dist =
    setuptools

classifier =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Libraries :: Python Modules

[options]
setup_requires =
  pbr